tests/good/default/int.go
package main

import "fmt"

func main() {
	var x int

	fmt.Print(x, "\n")
}

/*
== Expected program output ==
0
*/
