tests/bad/vars/multiple_declaration.go
package main

func main() {
	var x, x int
}

/*
== Expected compiler output ==
File "./tests/bad/vars/multiple_declaration.go", line 4, characters 8-9:
error: multiple declaration of x
*/
